--- a/Server/index.html
+++ b/Server/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>Biodome</title>
+</head>
+
 <body>
 
-    <h1>Control LED light</h1>
-    <input id="light" type="checkbox">LED
+    <h1>Test</h1>
 
 </body>
 
